Use upstream Java module, clean up documentation